fixed jumpotron

--- a/Hausaufgabe_1/css/custom_css.css
+++ b/Hausaufgabe_1/css/custom_css.css
@@ -1,13 +1,12 @@
-.jumbotron-responsive{
+.jumbotron{
     background: url(../img/background-jumbotron.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  margin-left: 0%;
-  margin-right: 0%;
-  padding-bottom: -100px;
+    background-size:cover;
+    padding-top: -50px;
+    height: 100%;
+    padding-bottom: 30%;
+    padding-top: 20%;
 }
+
 .jumbotron-text-container{
     width: 50%;
     height: 20%;
@@ -22,9 +21,29 @@
     margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
-    width:80%;
+    
 }
 
 .alert-examples{
     align-items: stretch;
 }
+
+.container{
+    width: 100%;
+    padding-left: 0%;
+    padding-top: 20px;
+}
+
+@media only screen and (max-width: 1300px) {
+    .jumbotron {
+        padding-top: 40%;
+        padding-bottom: 40%;
+    }
+  }
+
+  @media only screen and (max-width: 1300px) {
+    .jumbotron {
+        padding-top: 50%;
+        padding-bottom: 50%;
+    }
+  }
